--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@dfinity/auth-client": "^0.8.9",
     "@dfinity/authentication": "^0.8.9",
     "@dfinity/identity": "^0.8.9",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.4.3",
     "antd": "^4.16.1",
     "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
