--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@dfinity/identity": "^0.8.9",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "antd": "^4.16.1",
     "axios": "^0.21.1",
